# eventlog-rs

./: Cargo.toml  README.md
cmd/tdxmeasure/: readme.md
cmd/tdxmeasure/src/: main.rs
src/: enums.rs  lib.rs
src/parser/: mod.rs
src/parser/parsers/: blank.rs  boot_services_app.rs  efi_variable.rs  event_tag.rs  handoff_table.rs  mod.rs  simple.rs
